Merge r1849791 and r1849806 to the 1.2 branch.