@@ -264,7 +264,6 @@
         <exam.version>4.7.0</exam.version>
         
         <skipDeploy>false</skipDeploy>
-        <hermeticTests>true</hermeticTests>
     </properties>
 
     <repositories>
@@ -592,7 +591,7 @@
                              the data instead of loading it into memory). Obviously, the execution time of
                              these tests also are proportional to the heap size. To accelerate the execution
                              of the tests, we should use a heap size as small as possible. -->
-                        <argLine>${argLine} -Xms16m -Xmx48m ${securityManagerArgs}</argLine>
+                        <argLine>${argLine} -Xms16m -Xmx48m</argLine>
                         <systemProperties>
                             <property>
                                 <name>java.io.tmpdir</name>
@@ -631,7 +630,6 @@
                     <artifactId>maven-failsafe-plugin</artifactId>
                     <version>2.19</version>
                     <configuration>
-                        <argLine>${argLine} ${securityManagerArgs}</argLine>
                         <systemProperties>
                             <property>
                                 <name>java.io.tmpdir</name>
@@ -925,51 +923,6 @@
                         </configuration>
                     </execution>
                     <execution>
-                        <id>generate-policy-file</id>
-                        <phase>generate-test-resources</phase>
-                        <goals>
-                            <goal>execute</goal>
-                        </goals>
-                        <configuration>
-                            <scripts>
-                                <script><![CDATA[
-                                    import static groovy.json.StringEscapeUtils.escapeJava
-                                    
-                                    if (project.packaging != 'pom' && project.properties['hermeticTests'] == 'true') {
-                                        new File(project.build.directory, "test.policy").withWriter { out ->
-                                            out.println "grant {"
-                                            out.println """  permission java.io.FilePermission "${escapeJava(System.properties.'java.home')}\${/}-", "read";"""
-                                            out.println """  permission java.io.FilePermission "${escapeJava(session.settings.localRepository)}\${/}-", "read";"""
-                                            session.sortedProjects.each({
-                                                out.println """  permission java.io.FilePermission "${escapeJava(it.build.directory)}\${/}*", "read";"""
-                                            })
-                                            out.println """  permission java.io.FilePermission "${escapeJava(project.basedir.absolutePath)}\${/}-", "read";"""
-                                            out.println """  permission java.io.FilePermission "${escapeJava(project.build.directory)}", "read,write";"""
-                                            out.println """  permission java.io.FilePermission "${escapeJava(project.build.directory)}\${/}-", "read,write,delete";"""
-                                            out.println """  permission java.lang.RuntimePermission "*";"""
-                                            out.println """  permission java.lang.reflect.ReflectPermission "*";"""
-                                            out.println """  permission java.net.NetPermission "*";"""
-                                            out.println """  permission java.net.SocketPermission "localhost", "connect,listen,accept,resolve";"""
-                                            out.println """  permission java.security.SecurityPermission "*";"""
-                                            out.println """  permission java.util.PropertyPermission "*", "read,write";"""
-                                            out.println """  permission javax.management.MBeanPermission "*", "*";"""
-                                            out.println """  permission javax.management.MBeanServerPermission "*";"""
-                                            out.println """  permission javax.management.MBeanTrustPermission "*";"""
-                                            out.println """  permission javax.xml.bind.JAXBPermission "*";"""
-                                            out.println """  permission javax.xml.ws.WebServicePermission "publishEndpoint";"""
-                                            out.println """  permission org.osgi.framework.AdminPermission "*", "*";"""
-                                            out.println """  permission org.osgi.framework.ServicePermission "*", "register,get";"""
-                                            out.println "};"
-                                        }
-                                        project.properties['securityManagerArgs'] = '-Djava.security.manager -Djava.security.policy=' + project.build.directory.replace('\\', '/') + '/test.policy'
-                                    } else {
-                                        project.properties['securityManagerArgs'] = ''
-                                    }
-                                ]]></script>
-                            </scripts>
-                        </configuration>
-                    </execution>
-                    <execution>
                         <id>check-tmp-dir</id>
                         <phase>verify</phase>
                         <goals>
@@ -1044,6 +997,18 @@
                     <source>1.5</source>
                     <target>1.5</target>
                 </configuration>
+            </plugin>
+            <plugin>
+                <groupId>com.github.veithen.maven</groupId>
+                <artifactId>hermetic-maven-plugin</artifactId>
+                <version>0.1.0-SNAPSHOT</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>generate-policy</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
